[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "torchHydroNodes"
version = "0.1.0"  # Update with your package's version
description = "A Python package for training and testing hybrid hydrological models combining conceptual/physics-based models and neural networks."
authors = [
    {name = "Jesus Perez Curbelo", email = "jpcurbelo.ml@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["hydrology", "machine learning", "neural networks", "neural ODEs", "hybrid methods", "ODE solvers"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "PyYAML>=6.0.1",
    "torch>=2.3.1",
    "tqdm>=4.66.2",
    "xarray>=2024.5.0",
    "scipy>=1.13.1",
    "numpy>=1.26.4",
    "matplotlib>=3.9.1",
    "torchdiffeq>=0.2.4",
    "geopandas>=1.0.1",
    "cmcrameri>=1.9",
    "scikit-learn>=1.5.2",
    "h5py>=3.11.0",
    "tables>=3.10.1",
    "plotly>=5.24.1",
    "spotpy>=1.6.2",
    "ax-platform>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "sphinx", 
    "black", 
    "isort"
]
docs = [
    "sphinx", 
    "sphinx-rtd-theme",
    "nbsphinx",
]

[project.urls]
homepage = "https://torchhydronodes.readthedocs.io"
repository = "https://github.com/jpcurbelo/torchHydroNodes"

[project.scripts]
torchhydronodes = "torchhydronodes.cli:main"